playing around with heading, background, images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<head>
+<html lang="en-US" dir="ltr">
+  <!--Head contains the metadata for the website-->
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Joop's Coding Portolio Website">
+    <meta name="author" content="JoopyJones">
 
-</head>
-<body>
-  <h1>this is a fetch test</h1>
-</body>
+    <!--this ensures it looks good on different devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This is Joop's Website</title>
+
+    <style media="screen">
+      body {background-color: powderblue;}
+      h1 {color:orange;
+          font-size: 50px;
+          background-color: purple;
+          text-align: center;}
+    </style>
+  </head>
+
+  <body>
+    <h1>Welcome to my site</h1>
+    <div class="navigation">
+      <!--button bar will go here.-->
+    </div>
+    <hr>
+    <img title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png" alt="Picture of a cool sphere" width="450" >
+  </body>
+</html>
