Added in a page for game of life, added style template, added nav buttons

--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is Joop's Website</title>
 
-    <style media="screen">
-      body {background-color: powderblue;}
-      h1 {color:orange;
-          font-size: 50px;
-          background-color: purple;
-          text-align: center;}
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
 
   <body>
     <h1>Welcome to my site</h1>
     <div class="navigation">
-      <!--button bar will go here.-->
+      <a href="index.html">
+        <button type="button">Home</button>
+      </a>
+      <a href="gameOfLife.html">
+        <button type="button">Game of Life</button>
+      </a>
     </div>
     <hr>
     <img title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png" alt="Picture of a cool sphere" width="450" >
+
+
+
   </body>
 </html>
