update header coloring, added some comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>This is Joop's Website</title>
 
     <link rel="stylesheet" href="/css/style.css">
-
   </head>
 
   <body>
@@ -25,9 +24,7 @@
       </a>
     </div>
     <hr>
-    <img title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png" alt="Picture of a cool sphere" width="450" >
-
-
-
+    <img title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png"
+          alt="Picture of a cool sphere" width="450">
   </body>
 </html>
