added buttons and slider to game of life + added comments

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
 
-    <script defer type="text/javascript" src="/js/observr.js">
-
-    </script>
+    <script defer type="text/javascript" src="/js/observr.js"></script>
   </head>
 
   <body>
