added landing page with fourier animation

--- a/gameOfLife.html
+++ b/gameOfLife.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  <body>
+  <header>
     <h1>Conway's Game of Life with Infection</h1>
     <div class="navigation">
       <a href="index.html">
@@ -21,6 +21,7 @@
       </a>
     </div>
     <hr>
-
+  </header>
+  <body>
   </body>
 </html>
