updated hrefs to point to new main page

--- a/gameOfLife.html
+++ b/gameOfLife.html
@@ -13,7 +13,7 @@
   <header>
     <h1>Conway's Game of Life with Infection</h1>
     <div class="navigation">
-      <a href="index.html">
+      <a href="mainPage.html">
         <button type="button">Home</button>
       </a>
       <a href="gameOfLife.html">
