--- a/mainPage.html
+++ b/mainPage.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navBar main-nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="mainPage.html">Home</a></li>
           <li><a href="gameOfLife.html">Game of Life</a></li>
           <li><a href="#fifth">Fifth</a></li>
         </ul>
