resized canvas on main page to fit in div

--- a/gameOfLife.html
+++ b/gameOfLife.html
@@ -12,14 +12,11 @@
   </head>
   <header>
     <h1>Conway's Game of Life with Infection</h1>
-    <div class="navigation">
-      <a href="mainPage.html">
-        <button type="button">Home</button>
-      </a>
-      <a href="gameOfLife.html">
-        <button type="button">Game of Life</button>
-      </a>
-    </div>
+    <nav class="navBar main-nav">
+      <ul>
+        <li><a href="mainPage.html">Home</a></li>
+      </ul>
+    </nav>
     <hr>
   </header>
   <body>
