added gh icon, started about me

--- a/gameOfLife.html
+++ b/gameOfLife.html
@@ -15,6 +15,7 @@
     <nav class="navBar main-nav">
       <ul>
         <li><a href="mainPage.html">Home</a></li>
+        <li><a href="myProjects.html">Projects</a></li>
       </ul>
     </nav>
     <hr>
