--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 
     <script src="/js/libraries/p5.js"></script>
     <script src="/js/libraries/p5.dom.js"></script>
-    <!-- <script src="/js/discreteFourierTransform.js"></script>
-    <script src="/js/bestSoFar.js"></script> -->
-    <script type="module" src="welcomeMain.js"></script>
+    <script type="module" src="./js/welcomeMain.js"></script>
 
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body id="welcomeScreen">
-    <!-- <script src="/js/complexFourierTransform.js"></script> -->
     <div id="lejoopFourier"></div>
     <div id="welcomeButton">
       <nav class="navBar main-nav">
