--- a/mainPage.html
+++ b/mainPage.html
@@ -1,105 +1,36 @@
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr">
-  <!--Head contains the metadata for the website-->
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Joop's Coding Portolio Website">
-    <meta name="author" content="JoopyJones">
-
-    <!--this ensures it looks good on different devices-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is Joop's Website</title>
+    <title>About Me</title>
 
     <link rel="stylesheet" href="/css/style.css">
-
-    <script defer type="text/javascript" src="/js/observr.js"></script>
-  </head>
-
-  <body>
+</head>
+<body>
     <header>
-      <nav class="navBar main-nav">
-        <ul>
-          <li><a href="mainPage.html">Home</a></li>
-          <li><a href="gameOfLife.html">Game of Life</a></li>
-          <li><a href="#fifth">Fifth</a></li>
-        </ul>
-      </nav>
-    </header>
+        <nav class="navBar main-nav">
+          <ul>
+            <li><a href="mainPage.html">Home</a></li>
+            <li><a href="myProjects.html">Projects</a></li>
+            <li><a href="gameOfLife.html">Game of Life</a></li>
+            <li><a target="_blank" href="https://github.com/JoopyJones" ><img id="GitHub" title="GitHub" src="/images/github_icon.png"></a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <section class="card">
-      <p id="first">
+      <section id="portraitSection">
+        <img id="portrait" title="Jason Klein" src="/images/github_icon.png">
+      </section>
+      <section>
+        <h1>Hello there, I'm Jason</h1>
+        <h2>Curious, Creative, Lifelong Learner</h2>
+        <p id="aboutMeParagraph">I'm a software developer who loves to learn and solve problems. <br><br>
+                                Skills: SQL, Java, C, JavaScript, Node.js/Express, HTML/CSS, MOCA <br><br>
+                                WMS Skills: Developing for RedPrairie/JDA/Blue Yonder, MOCA, DDA, Integrator,<br>
+                                            RF, JRXML/RPX reports</p>
 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et suscipit metus. Fusce at pharetra eros. Donec vulputate, est lacinia tincidunt vehicula, lorem metus bibendum dolor, sodales congue eros sem in odio. Proin porttitor molestie pellentesque. Integer vitae mattis ipsum. Fusce eu porta augue. Nulla commodo purus eget vulputate tempor.
-        <br>
-        Praesent sit amet vehicula nibh. Mauris tellus mi, porttitor eu dictum quis, faucibus non est. Maecenas semper sollicitudin mi, eu mattis ipsum gravida in. Vestibulum suscipit sem a fermentum elementum. Vivamus massa ipsum, egestas ut iaculis vel, tincidunt et metus. Vivamus pretium vitae nisi at varius. Ut tellus ipsum, dictum ac laoreet at, lacinia ac eros. Suspendisse dictum nisi rutrum, congue enim sit amet, lacinia felis. Vestibulum posuere ipsum ligula, vitae scelerisque elit gravida sit amet. Cras vitae diam vel neque lobortis aliquam. Duis cursus justo ac metus ultricies dignissim in quis neque. Nam scelerisque blandit mi, ac sollicitudin sapien.
-        <br>
-        Curabitur nec purus quis justo malesuada lobortis. Donec in mauris in magna malesuada dictum et a dui. Vestibulum id ante ut turpis porta placerat et ut enim. Aliquam at lectus in nulla rhoncus eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer vitae felis in dui imperdiet lacinia. Suspendisse consectetur vehicula orci in mattis. Suspendisse cursus condimentum erat vitae auctor. Etiam scelerisque est pellentesque, porttitor neque eu, aliquam odio. Integer sit amet accumsan lacus. Curabitur eleifend consequat gravida. Suspendisse rhoncus ipsum ac quam scelerisque, sit amet ultrices turpis sagittis. Praesent eget odio eu velit ornare vehicula a nec est. Vestibulum at volutpat ex, in porttitor purus.
-        <br>
-        Praesent imperdiet vel orci sit amet eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin eu lorem ultricies, maximus est eget, varius elit. Sed imperdiet venenatis odio quis eleifend. Suspendisse tristique ante quis augue suscipit, eget pellentesque magna tincidunt. Nullam ultricies lobortis felis, ac vehicula magna. Sed aliquet libero et dui laoreet, et egestas tellus sollicitudin. Duis pulvinar tincidunt enim, sed sodales felis ultrices eu.
-        <br>
-        Vivamus fermentum nisi tristique libero hendrerit, sed placerat dui tempus. Quisque placerat cursus ex, ut lobortis nisi consequat ac. Nulla euismod scelerisque tincidunt. Pellentesque vitae turpis sit amet tellus scelerisque elementum in vel lacus. Suspendisse lobortis felis consectetur quam ultrices, eu pulvinar sapien commodo. Vestibulum pellentesque quis erat quis posuere. Aenean feugiat lacus nec sapien laoreet, ac aliquet ante accumsan. Morbi venenatis consectetur est, sed placerat tellus pulvinar quis. Praesent consectetur facilisis dolor at tristique. Sed urna ipsum, molestie a egestas eu, fermentum non nisi.
-      </p>
-    </section>
-
-    <section class="card">
-      <img id="second" title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png"
-            alt="Picture of a cool sphere" width="450">
-    </section>
-
-    <section class="card">
-      <p id="third">
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et suscipit metus. Fusce at pharetra eros. Donec vulputate, est lacinia tincidunt vehicula, lorem metus bibendum dolor, sodales congue eros sem in odio. Proin porttitor molestie pellentesque. Integer vitae mattis ipsum. Fusce eu porta augue. Nulla commodo purus eget vulputate tempor.
-        <br>
-        Praesent sit amet vehicula nibh. Mauris tellus mi, porttitor eu dictum quis, faucibus non est. Maecenas semper sollicitudin mi, eu mattis ipsum gravida in. Vestibulum suscipit sem a fermentum elementum. Vivamus massa ipsum, egestas ut iaculis vel, tincidunt et metus. Vivamus pretium vitae nisi at varius. Ut tellus ipsum, dictum ac laoreet at, lacinia ac eros. Suspendisse dictum nisi rutrum, congue enim sit amet, lacinia felis. Vestibulum posuere ipsum ligula, vitae scelerisque elit gravida sit amet. Cras vitae diam vel neque lobortis aliquam. Duis cursus justo ac metus ultricies dignissim in quis neque. Nam scelerisque blandit mi, ac sollicitudin sapien.
-        <br>
-        Curabitur nec purus quis justo malesuada lobortis. Donec in mauris in magna malesuada dictum et a dui. Vestibulum id ante ut turpis porta placerat et ut enim. Aliquam at lectus in nulla rhoncus eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer vitae felis in dui imperdiet lacinia. Suspendisse consectetur vehicula orci in mattis. Suspendisse cursus condimentum erat vitae auctor. Etiam scelerisque est pellentesque, porttitor neque eu, aliquam odio. Integer sit amet accumsan lacus. Curabitur eleifend consequat gravida. Suspendisse rhoncus ipsum ac quam scelerisque, sit amet ultrices turpis sagittis. Praesent eget odio eu velit ornare vehicula a nec est. Vestibulum at volutpat ex, in porttitor purus.
-        <br>
-        Praesent imperdiet vel orci sit amet eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin eu lorem ultricies, maximus est eget, varius elit. Sed imperdiet venenatis odio quis eleifend. Suspendisse tristique ante quis augue suscipit, eget pellentesque magna tincidunt. Nullam ultricies lobortis felis, ac vehicula magna. Sed aliquet libero et dui laoreet, et egestas tellus sollicitudin. Duis pulvinar tincidunt enim, sed sodales felis ultrices eu.
-        <br>
-        Vivamus fermentum nisi tristique libero hendrerit, sed placerat dui tempus. Quisque placerat cursus ex, ut lobortis nisi consequat ac. Nulla euismod scelerisque tincidunt. Pellentesque vitae turpis sit amet tellus scelerisque elementum in vel lacus. Suspendisse lobortis felis consectetur quam ultrices, eu pulvinar sapien commodo. Vestibulum pellentesque quis erat quis posuere. Aenean feugiat lacus nec sapien laoreet, ac aliquet ante accumsan. Morbi venenatis consectetur est, sed placerat tellus pulvinar quis. Praesent consectetur facilisis dolor at tristique. Sed urna ipsum, molestie a egestas eu, fermentum non nisi.
-      </p>
-    </section>
-
-    <section class="card">
-      <img id="fourth" title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png"
-            alt="Picture of a cool sphere" width="450">
-    </section>
-
-    <section class="card">
-      <p id="fifth">
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et suscipit metus. Fusce at pharetra eros. Donec vulputate, est lacinia tincidunt vehicula, lorem metus bibendum dolor, sodales congue eros sem in odio. Proin porttitor molestie pellentesque. Integer vitae mattis ipsum. Fusce eu porta augue. Nulla commodo purus eget vulputate tempor.
-        <br>
-        Praesent sit amet vehicula nibh. Mauris tellus mi, porttitor eu dictum quis, faucibus non est. Maecenas semper sollicitudin mi, eu mattis ipsum gravida in. Vestibulum suscipit sem a fermentum elementum. Vivamus massa ipsum, egestas ut iaculis vel, tincidunt et metus. Vivamus pretium vitae nisi at varius. Ut tellus ipsum, dictum ac laoreet at, lacinia ac eros. Suspendisse dictum nisi rutrum, congue enim sit amet, lacinia felis. Vestibulum posuere ipsum ligula, vitae scelerisque elit gravida sit amet. Cras vitae diam vel neque lobortis aliquam. Duis cursus justo ac metus ultricies dignissim in quis neque. Nam scelerisque blandit mi, ac sollicitudin sapien.
-        <br>
-        Curabitur nec purus quis justo malesuada lobortis. Donec in mauris in magna malesuada dictum et a dui. Vestibulum id ante ut turpis porta placerat et ut enim. Aliquam at lectus in nulla rhoncus eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer vitae felis in dui imperdiet lacinia. Suspendisse consectetur vehicula orci in mattis. Suspendisse cursus condimentum erat vitae auctor. Etiam scelerisque est pellentesque, porttitor neque eu, aliquam odio. Integer sit amet accumsan lacus. Curabitur eleifend consequat gravida. Suspendisse rhoncus ipsum ac quam scelerisque, sit amet ultrices turpis sagittis. Praesent eget odio eu velit ornare vehicula a nec est. Vestibulum at volutpat ex, in porttitor purus.
-        <br>
-        Praesent imperdiet vel orci sit amet eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin eu lorem ultricies, maximus est eget, varius elit. Sed imperdiet venenatis odio quis eleifend. Suspendisse tristique ante quis augue suscipit, eget pellentesque magna tincidunt. Nullam ultricies lobortis felis, ac vehicula magna. Sed aliquet libero et dui laoreet, et egestas tellus sollicitudin. Duis pulvinar tincidunt enim, sed sodales felis ultrices eu.
-        <br>
-        Vivamus fermentum nisi tristique libero hendrerit, sed placerat dui tempus. Quisque placerat cursus ex, ut lobortis nisi consequat ac. Nulla euismod scelerisque tincidunt. Pellentesque vitae turpis sit amet tellus scelerisque elementum in vel lacus. Suspendisse lobortis felis consectetur quam ultrices, eu pulvinar sapien commodo. Vestibulum pellentesque quis erat quis posuere. Aenean feugiat lacus nec sapien laoreet, ac aliquet ante accumsan. Morbi venenatis consectetur est, sed placerat tellus pulvinar quis. Praesent consectetur facilisis dolor at tristique. Sed urna ipsum, molestie a egestas eu, fermentum non nisi.
-      </p>
-    </section>
-
-    <section class="card">
-      <img id="sixth" title="Cool Picture" src="/images/klein_icosahedral_function_sphere.png"
-            alt="Picture of a cool sphere" width="450">
-    </section>
-
-    <section class="card">
-      <p id="seventh">
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et suscipit metus. Fusce at pharetra eros. Donec vulputate, est lacinia tincidunt vehicula, lorem metus bibendum dolor, sodales congue eros sem in odio. Proin porttitor molestie pellentesque. Integer vitae mattis ipsum. Fusce eu porta augue. Nulla commodo purus eget vulputate tempor.
-        <br>
-        Praesent sit amet vehicula nibh. Mauris tellus mi, porttitor eu dictum quis, faucibus non est. Maecenas semper sollicitudin mi, eu mattis ipsum gravida in. Vestibulum suscipit sem a fermentum elementum. Vivamus massa ipsum, egestas ut iaculis vel, tincidunt et metus. Vivamus pretium vitae nisi at varius. Ut tellus ipsum, dictum ac laoreet at, lacinia ac eros. Suspendisse dictum nisi rutrum, congue enim sit amet, lacinia felis. Vestibulum posuere ipsum ligula, vitae scelerisque elit gravida sit amet. Cras vitae diam vel neque lobortis aliquam. Duis cursus justo ac metus ultricies dignissim in quis neque. Nam scelerisque blandit mi, ac sollicitudin sapien.
-        <br>
-        Curabitur nec purus quis justo malesuada lobortis. Donec in mauris in magna malesuada dictum et a dui. Vestibulum id ante ut turpis porta placerat et ut enim. Aliquam at lectus in nulla rhoncus eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer vitae felis in dui imperdiet lacinia. Suspendisse consectetur vehicula orci in mattis. Suspendisse cursus condimentum erat vitae auctor. Etiam scelerisque est pellentesque, porttitor neque eu, aliquam odio. Integer sit amet accumsan lacus. Curabitur eleifend consequat gravida. Suspendisse rhoncus ipsum ac quam scelerisque, sit amet ultrices turpis sagittis. Praesent eget odio eu velit ornare vehicula a nec est. Vestibulum at volutpat ex, in porttitor purus.
-        <br>
-        Praesent imperdiet vel orci sit amet eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin eu lorem ultricies, maximus est eget, varius elit. Sed imperdiet venenatis odio quis eleifend. Suspendisse tristique ante quis augue suscipit, eget pellentesque magna tincidunt. Nullam ultricies lobortis felis, ac vehicula magna. Sed aliquet libero et dui laoreet, et egestas tellus sollicitudin. Duis pulvinar tincidunt enim, sed sodales felis ultrices eu.
-        <br>
-        Vivamus fermentum nisi tristique libero hendrerit, sed placerat dui tempus. Quisque placerat cursus ex, ut lobortis nisi consequat ac. Nulla euismod scelerisque tincidunt. Pellentesque vitae turpis sit amet tellus scelerisque elementum in vel lacus. Suspendisse lobortis felis consectetur quam ultrices, eu pulvinar sapien commodo. Vestibulum pellentesque quis erat quis posuere. Aenean feugiat lacus nec sapien laoreet, ac aliquet ante accumsan. Morbi venenatis consectetur est, sed placerat tellus pulvinar quis. Praesent consectetur facilisis dolor at tristique. Sed urna ipsum, molestie a egestas eu, fermentum non nisi.
-      </p>
-    </section>
-
-  </body>
+      </section>
+</body>
 </html>
