--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
-  <body id="welcomeScreen">
+  <body>
     <div id="lejoopFourier"></div>
     
     <section class="card" id="portraitSection">
@@ -27,6 +27,10 @@
                                <strong>Skills:</strong> SQL, Java, C, JavaScript, Node.js/Express, HTML/CSS, MOCA <br>
                                 <strong>WMS Skills:</strong> Developing for RedPrairie/JDA/Blue Yonder, MOCA, DDA, Integrator,<br>
                                             RF, JRXML/RPX reports</p>
+      </section>
+      <section class="card">
+        <h1 id="projects">Check out some of my projects!</h1>
+        <!-- <a href="gameOfLife.html">Game of Life</a> -->
       </section>
   </body>
 </html>
