added section blur and github contributions graph

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="/js/libraries/p5.js"></script>
     <script src="/js/libraries/p5.dom.js"></script>
     <script type="module" src="./js/welcomeMain.js"></script>
-    <script defer type="text/javascript" src="/js/observr.js"></script>
+    <!-- <script defer type="text/javascript" src="/js/observr.js"></script> -->
 
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -27,10 +27,10 @@
                                <strong>Skills:</strong> SQL, Java, C, JavaScript, Node.js/Express, HTML/CSS, MOCA <br>
                                 <strong>WMS Skills:</strong> Developing for RedPrairie/JDA/Blue Yonder, MOCA, DDA, Integrator,<br>
                                             RF, JRXML/RPX reports</p>
+        <img src="https://ghchart.rshah.org/f78166/joopyjones" alt="joopyjones' Github chart" />
       </section>
-      <section class="card">
+      <!-- <section class="card">
         <h1 id="projects">Check out some of my projects!</h1>
-        <!-- <a href="gameOfLife.html">Game of Life</a> -->
-      </section>
+      </section> -->
   </body>
 </html>
