fixed about me section load clipping on site load

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joop.gg</title>
 
     <script src="/js/libraries/p5.js"></script>
@@ -12,7 +13,7 @@
   </head>
 
   <body>
-    <div id="lejoopFourier"></div>
+    <section id="lejoopFourier"></section>
     
     <section class="card" id="portraitSection">
         <img id="portrait" title="Jason Klein" src="/images/github_icon.png">
