added profile picture, updated TODO

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="lejoopFourier"></section>
     
     <section class="card" id="portraitSection">
-        <img id="portrait" title="Jason Klein" src="/images/github_icon.png">
+        <img id="portrait" title="Jason Klein" src="/images/six.jpg">
         <h1>Hello there, I'm Jason</h1>
         <h2>Curious, Creative, Lifelong Learner</h2>
         <div>
@@ -29,8 +29,5 @@
                                             RF, JRXML/RPX reports</p>
         <img src="https://ghchart.rshah.org/f78166/joopyjones" alt="joopyjones' Github chart" />
       </section>
-      <!-- <section class="card">
-        <h1 id="projects">Check out some of my projects!</h1>
-      </section> -->
   </body>
 </html>
