added in lazy loading for profile pic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="lejoopFourier"></section>
     
     <section class="card" id="portraitSection">
-        <img id="portrait" title="Jason Klein" src="/images/six.jpg">
+        <img id="portrait" title="Jason Klein" src="/images/six.jpg" loading="lazy">
         <h1>Hello there, I'm Jason</h1>
         <h2>Curious, Creative, Lifelong Learner</h2>
         <div>
